syntax = "proto3";

message PluginCode {
    string name = 1;
    bytes input = 2;
}
